--- a/style.css
+++ b/style.css
@@ -5,13 +5,46 @@
 }
 
 section {
+    position: relative;
     width: 100%;
     height: 100vh;
     background-color: black;
     overflow: hidden;
     color: #fff;
-    font-size: 5em;
+    font-size: 6em;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.box {
+    position: relative;
+    width: 100%;
+    min-height: 100vh;
+    background-color: #fff;
+    overflow: hidden;
+    color: black;
+    padding: 100px;
+}
+
+.box h2 {
+    font-size: 3em;
+    margin-bottom: 8px;
+}
+
+.box .logo {
+    max-width: 300px;
+}
+
+.box2 {
+    width: 100%;
+    min-height: 100vh;
+    background-color: black;
+    overflow: hidden;
+    color: #fff;
+    padding: 100px;
+}
+
+.box2 h2 {
+    font-size: 3em;
 }
